FIX "checkbox + select" wraps

--- a/src/_select_svelte.scss
+++ b/src/_select_svelte.scss
@@ -20,7 +20,7 @@
 
 .ss-container {
   position: relative;
-  width: 100% !important;
+//  width: 100% !important;
   height: unset;
   border: 0;
   padding: 0;
